# law-llm

./: README.md
scraping/: pyproject.toml
scraping/scripts/: convert_pdf_to_text.py  download_pdfs.py
