[tool.poetry]
name = "uk-law"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "uk_law"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.6.3"
jupyterlab-vim = "^0.16.0"
pdfplumber = "^0.9.0"
httpx = {extras = ["http2"], version = "^0.24.0"}
nest-asyncio = "^1.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
